<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@color/colorAccent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_intro" />

            <TextView
                style="@style/TextAppearance.AppCompat.Display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginEnd="@dimen/xl_margin"
                android:layout_marginStart="@dimen/xl_margin"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:lineSpacingExtra="-3.0dip"
                android:text="@string/text_welcome_message"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16.0dip"
                android:layout_marginTop="40.0dip"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:background="?selectableItemBackgroundBorderless"

                    app:srcCompat="@drawable/ic_language"
                    android:tint="@color/colorWhite" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10.0dip"
                    android:background="?selectableItemBackgroundBorderless"
                    android:onClick="contact"
                    app:srcCompat="@drawable/ic_call_center"
                    android:tint="@color/colorWhite" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16.0dip"
        android:layout_marginStart="16.0dip"
        android:layout_marginTop="150.0dip"
        app:contentPadding="16.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_hint_username">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnForgetPassword"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_forget_password"
                android:textAllCaps="false"
                android:textColor="@color/colorTextSecondary" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Button.Primary"
                android:background="@color/colorPrimary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/btn_login"
                android:textAllCaps="false" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>